@@ -3991,6 +3991,8 @@ enum : uint16_t
     STR_RIDE_SET_VEHICLE_REVERSED_FAIL = 6585,
 
     STR_OPENRCT2_DROPDOWN = 6586,
+    STR_ABOUT_OPENRCT2_TITLE = 6587,
+    STR_ABOUT_FAIRGROUND_ORGAN = 6588,
 
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
