@@ -1,5 +1,6 @@
 0.4.6 (in development)
 ------------------------------------------------------------------------
+- Feature: [OpenMusic#41] Official Title Theme by Allister Brimble.
 - Improved: [#20200] Allow audio files to play to up to 44100hz sample rate (from 22050hz).
 - Change: [#20110] Fix a few RCT1 build height parity discrepancies.
 - Fix: [#19823] Parkobj, disallow overriding objects of different object types.
